Add World class

--- a/PixelExplorer/PixelExplorer.vcxproj
+++ b/PixelExplorer/PixelExplorer.vcxproj
@@ -232,8 +232,12 @@
     <None Include="assets\shaders\base.shader" />
     <None Include="assets\shaders\chunk.shader" />
     <None Include="assets\shaders\cube.shader" />
+    <None Include="src\common\Color.inl" />
+    <None Include="src\common\DataBuffer.inl" />
     <None Include="src\common\Logger.inl" />
+    <None Include="src\common\OSHelpers.inl" />
     <None Include="src\common\RefCount.inl" />
+    <None Include="src\common\Timer.inl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
