--- a/PixelExplorer/PixelExplorer.vcxproj
+++ b/PixelExplorer/PixelExplorer.vcxproj
@@ -154,7 +154,9 @@
     <ClCompile Include="src\engine\input\InputManager.cpp" />
     <ClCompile Include="src\game\block\BlockManifest.cpp" />
     <ClCompile Include="src\game\block\BlockShape.cpp" />
+    <ClCompile Include="src\game\chunk\ChunkManager.cpp" />
     <ClCompile Include="src\game\chunk\ChunkRenderMesh.cpp" />
+    <ClCompile Include="src\game\chunk\ChunkRenderMeshFactory.cpp" />
     <ClCompile Include="src\game\Game.cpp" />
     <ClCompile Include="src\game\gui\MainMenu.cpp" />
     <ClCompile Include="src\game\world\World.cpp" />
@@ -191,6 +193,7 @@
     <ClInclude Include="src\game\chunk\Chunk.h" />
     <ClInclude Include="src\game\chunk\ChunkManager.h" />
     <ClInclude Include="src\game\chunk\ChunkRenderMesh.h" />
+    <ClInclude Include="src\game\chunk\ChunkRenderMeshFactory.h" />
     <ClInclude Include="src\game\FPSCamera.h" />
     <ClInclude Include="src\game\Game.h" />
     <ClInclude Include="src\engine\Camera.h" />
@@ -228,10 +231,6 @@
     <ClInclude Include="src\vendor\stb_image.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="assets\blocks\faces\GREEN_FACE.pxface" />
-    <None Include="assets\shaders\base.shader" />
-    <None Include="assets\shaders\chunk.shader" />
-    <None Include="assets\shaders\cube.shader" />
     <None Include="src\common\Color.inl" />
     <None Include="src\common\DataBuffer.inl" />
     <None Include="src\common\Logger.inl" />
